--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 streamlit==1.35.0
+
+# NLP stack
 spacy==3.7.2
 thinc==8.2.2
 numpy==1.26.4
+en-core-web-sm==3.7.1
+
+# ML / utils
 nltk
 scikit-learn
-PyPDF2
-plotly
 pandas
+plotly
+PyPDF2
 
-en-core-web-sm==3.7.1
+# Streamlit dependency (PINNED)
+rich==13.7.1
