--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
+# ---- Core ----
 streamlit==1.35.0
+rich==13.7.1
 
-# NLP stack
+# ---- NLP ----
 spacy==3.7.2
 thinc==8.2.2
 numpy==1.26.4
 en-core-web-sm==3.7.1
 
-# ML / utils
+# ---- Utils / ML ----
 nltk
 scikit-learn
 pandas
 plotly
 PyPDF2
-
-# Streamlit dependency (PINNED)
-rich==13.7.1
